[package]
name = "signer-stronghold"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.14.0"
alloy-network = "0.14.0"
alloy-primitives = "1.0.0"
alloy-signer = "0.14.0"
async-trait = "0.1.88"
iota_stronghold = "2.1.0"
thiserror = "2.0"

[dev-dependencies]
alloy = { version = "0.14.0", features = ["node-bindings", "providers"] }
tempfile = "3.19.1"
tokio = "1.44.2"
